fixed jumping divs

--- a/app/assets/stylesheets/custom.css.sass
+++ b/app/assets/stylesheets/custom.css.sass
@@ -125,6 +125,7 @@ section
   height: 30%
   display: inline-block
   font-size: 12px
+  vertical-align: top
 
 .alert-message
   div.page-header
